--- a/templates/userauths/sign-in.html
+++ b/templates/userauths/sign-in.html
@@ -39,7 +39,7 @@
                 <input name="remember" class="form-check-input form-check-input_fill" type="checkbox" value="" id="flexCheckDefault1" />
                 <label class="form-check-label text-secondary" for="flexCheckDefault1">Remember me</label>
               </div>
-              <a href="reset_password.php" class="btn-text ms-auto">Lost password?</a>
+              {% comment %} <a href="reset_password.php" class="btn-text ms-auto">Lost password?</a> {% endcomment %}
             </div>
 
             <button class="btn btn-primary w-100 text-uppercase" type="submit">
