--- a/templates/userauths/email_template.html
+++ b/templates/userauths/email_template.html
@@ -428,7 +428,7 @@
                                     <img
                                       alt="I'm an image"
                                       class="fullWidth"
-                                      src="{% static "images/logo_org.png" %}"
+                                      src="https://beta.urbanfarm.store/static/images/logo_org.png"
                                       style="
                                         display: block;
                                         height: auto;
@@ -890,7 +890,7 @@
                                       <tr>
                                         <td style="padding: 0 10px 0 10px">
                                           <a
-                                            href="https://www.facebook.com"
+                                            href="https://www.facebook.com/urbanfarm.org.in?mibextid=ZbWKwL"
                                             target="_blank"
                                             ><img
                                               alt="Facebook"
@@ -907,7 +907,7 @@
                                         </td>
                                         <td style="padding: 0 10px 0 10px">
                                           <a
-                                            href="https://www.instagram.com"
+                                            href="https://www.instagram.com/urban.farm/?igsh=MTZocHZmcDVydHY3ag%3D%3D"
                                             target="_blank"
                                             ><img
                                               alt="Instagram"
@@ -924,7 +924,7 @@
                                         </td>
                                         <td style="padding: 0 10px 0 10px">
                                           <a
-                                            href="https://www.linkedin.com"
+                                            href="https://www.linkedin.com/company/urban-farm-systems-and-technologies-llp/"
                                             target="_blank"
                                             ><img
                                               alt="LinkedIn"
