--- a/templates/core/payment_invoice.html
+++ b/templates/core/payment_invoice.html
@@ -177,7 +177,10 @@
             <p class="cs-mb0"><b class="cs-primary_color cs-bold">Additional Information:</b></p>
             <p class="cs-m0"> <p class="cs-m0"><b>Order Id: </b>{{razorpay_order_id}} <br>
               <b> Bill To: </b> {{first_name}} {{last_name}} <br>
-             <b>  Shipping Address: </b>{{city}}
+              <b> City: </b> {{checkout_city}}<br>
+              <b> District: </b> {{checkout_district}} <br>
+              <b> Division: </b> {{checkout_division}} <br>
+              <b> State: </b> {{checkout_state}} <br>
                
                </p> </p>
           </div>
