After shopping, delete product from the cart

--- a/templates/core/payment_invoice.html
+++ b/templates/core/payment_invoice.html
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/x-icon" href="{% static 'images/logo_org.png' %}">
   <!-- Site Title -->
   <title>Thank you for your order | You can check the invoice details in my account</title>
-  <link rel="stylesheet" href="{% static 'assets-invoice/css/style.css' %}">
+  <link rel="stylesheet" href="http://127.0.0.1:8000/static/assets-invoice/css/style.css">
 </head>
 
 <body>
@@ -207,10 +207,10 @@
       </div>
     </div>
   </div>
-  <script src="{% static 'assets-invoice/js/jquery.min.js' %}"></script>
-  <script src="{% static 'assets-invoice/js/jspdf.min.js' %}"></script>
-  <script src="{% static 'assets-invoice/js/html2canvas.min.js' %}"></script>
-  <script src="{% static 'assets-invoice/js/main.js' %}"></script>
+  <script src="http://127.0.0.1:8000/static/assets-invoice/js/jquery.min.js"></script>
+  <script src="http://127.0.0.1:8000/static/assets-invoice/js/jspdf.min.js"></script>
+  <script src="http://127.0.0.1:8000/static/assets-invoice/js/html2canvas.min.js"></script>
+  <script src="http://127.0.0.1:8000/static/assets-invoice/js/main.js"></script>
   <script>
     function downloadInvoice() {
         // Get the HTML content of the invoice
