Add thankyou order template

--- a/templates/core/cart.html
+++ b/templates/core/cart.html
@@ -63,7 +63,7 @@
                                 </div>
                             </td>
                             <td>
-                                <span class="shopping-cart__product-price">₹ {{item.price}}</span>
+                                <span class="shopping-cart__product-price">₹ {{item.price|floatformat:2}}</span>
                             </td>
                             <td>
                                 <div class="qty-control position-relative">
